// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mappingWizard actions should fetch source clusters and return PENDING and FULFILLED action 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_SOURCE_CLUSTERS_PENDING",
  },
  Object {
    "type": "FETCH_V2V_SOURCE_CLUSTERS_FULFILLED",
  },
]
`;

exports[`mappingWizard actions should fetch source clusters and return PENDING and REJECTED action 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_SOURCE_CLUSTERS_PENDING",
  },
  Object {
    "error": true,
    "payload": [Error: <mocked error>],
    "type": "FETCH_V2V_SOURCE_CLUSTERS_REJECTED",
  },
]
`;

exports[`queryProvidersAction dispatches PENDING and FULFILLED actions 1`] = `
Array [
  Object {
    "type": "QUERY_V2V_PROVIDERS_PENDING",
  },
  Object {
    "payload": Array [
      Object {
        "mock": "data",
      },
    ],
    "type": "QUERY_V2V_PROVIDERS_FULFILLED",
  },
]
`;

exports[`queryProvidersAction dispatches PENDING and REJECTED actions 1`] = `
Array [
  Object {
    "type": "QUERY_V2V_PROVIDERS_PENDING",
  },
  Object {
    "error": true,
    "payload": [Error: <mocked error>],
    "type": "QUERY_V2V_PROVIDERS_REJECTED",
  },
]
`;
